--- a/app/views/home/corkboard-html/index.html
+++ b/app/views/home/corkboard-html/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item active flex-wrap">
+            <div class="carousel-item flex-wrap">
                 <nav class="navbar navbar-inverse text-center bg-primary w-100">
                     <h1 class="display-4">Branch #2</h1>
                 </nav>
