fixed css by css-lord

--- a/app/views/home/corkboard-html/index.html
+++ b/app/views/home/corkboard-html/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <!-- Font Awesome CSS-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item active flex-wrap">
+            <div class="carousel-item flex-wrap">
                 <nav class="navbar navbar-inverse text-center bg-primary w-100">
                     <h1 class="display-4">Branch #2</h1>
                 </nav>
