--- a/app/views/home/corkboard-html/style.css
+++ b/app/views/home/corkboard-html/style.css
@@ -83,14 +83,13 @@ nav.navbar h1 {
 @media screen and (min-width: 576px) {
     .card {
         flex: 0 0 90%;
-        margin: 5%;
+        margin: 10px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .card {
         flex: 0 0 46%;
-        margin: 2% 1%;
     }
 }
 
@@ -109,6 +108,5 @@ nav.navbar h1 {
 @media screen and (min-width: 1680px) {
     .card {
         flex: 0 0 18%;
-        margin: 2% 1%;
     }
 }
