modified irrelevant files

--- a/app/views/home/corkboard-html/index.html
+++ b/app/views/home/corkboard-html/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active flex-wrap">
+            <div class="carousel-item flex-wrap">
                 <nav class="navbar navbar-inverse text-center bg-primary w-100">
                     <h1 class="display-4">Branch #1</h1>
                 </nav>
