--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? %>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Branches</h1>
@@ -27,3 +29,35 @@
 <br>
 
 <%= link_to 'New Branch', new_branch_path %>
+
+<% else %>
+
+<div class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+  <% @branches.each do |branch| %>
+    <% if branch == @branches.first %>
+      <div class="carousel-item active flex-wrap">
+        <nav class="navbar navbar-inverse text-center bg-primary w-100">
+          <h1 class="display-4"><%= branch.name %></h1>
+        </nav>
+      </div>
+    <% else %>
+      <div class="carousel-item flex-wrap">
+        <nav class="navbar navbar-inverse text-center bg-primary w-100">
+          <h1 class="display-4"><%= branch.name %></h1>
+        </nav>
+      </div>
+    <% end %>
+  <% end %>
+  </div>
+</div>
+
+<% end %>
+
+<!--JQuery, Bootstrap JS-->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    crossorigin="anonymous"></script>
