--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :branch_json_url %>
-    <%= f.text_area :branch_json_url %>
+    <%= f.text_area :branch_json_url :class=> "form-control"%>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"btn btn-secondary"%>
   </div>
 <% end %>
