--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
  */
 
 
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
+@import url("//netdna.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css");
 @import "bootstrap";
 
 @import url('https://fonts.google.com/specimen/Lato?selection.family=Lato');
