--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -18,10 +18,10 @@
 
   <div class="form-group">
     <%= f.label :branch_json_url %>
-    <%= f.text_area :branch_json_url :class=> "form-control"%>
+    <%= f.text_area :branch_json_url %>
   </div>
 
   <div class="actions">
-    <%= f.submit :class=>"btn btn-secondary"%>
+    <%= f.submit :class => "btn btn-secondary"%>
   </div>
 <% end %>
