variable reload time

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -45,7 +45,8 @@
   end
 %>
 
-<div class="carousel slide" data-ride="carousel" data-interval="20000">
+
+<div class="carousel slide" data-ride="carousel" data-interval="20000" data-wrap="false">
   <div class="carousel-inner">
   <% @@cranches.each_with_index do |branch, index| %>
 
@@ -63,13 +64,33 @@
           <% branch.getTeams.each do |i| %>
           
             <div class="card">
-              <div class="card-header card-header-danger">
-                  <h4 class="d-flex justify-content-between"><%= i.name %><i class="fa fa-check"></i></h4>
+              <% 
+                n = d = 0 
+                i.getBuilds.each do |j|
+                  n += j.getInfo[2]
+                  d += j.getInfo[3]
+                end
+              %>
+
+              <% if 10 * n < 7 * d %>
+                <div class="card-header card-header-danger">
+              <% else %>
+                <div class="card-header card-header-success">
+              <% end %>
+              
+                  <h4 class="d-flex justify-content-between"><%= i.name %>
+
+                    <% if 10 * n < 7 * d %>
+                      <i class="fa fa-times"></i>
+                    <% else %>
+                      <i class="fa fa-check"></i>
+                    <% end %>
+                  </h4>
               </div>
               <div class="card-block">
                 <% i.getBuilds.each do |j| %>
                   <p class="card-text d-flex justify-content-between"><%= j.getInfo[0] %>
-                  <% if j.getInfo[3] == 0 %>
+                  <% if j.getInfo[3] == 1 %>
                     <% if j.getInfo[1] == "blue" %>
                       <i class="fa fa-check-circle"></i>
                     <% elsif j.getInfo[1] == "red" %>
@@ -112,6 +133,7 @@
     function()
     {
       window.location.reload();
-    }, 60000
+    }, 
+    <%= @branches.size * 20000 %>
   );
 </script>
