--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Branch</h1>
+<div class="container", id="branchnewform">
+	<h1>New Branch</h1>
 
-<%= render 'form', branch: @branch %>
-
-<%= link_to 'Back', branches_path %>
+	<%= render 'form', branch: @branch %>
+</div>
