--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Branch</h1>
+<div class="container", id="branchnewform">
+	<h1>Editing Branch</h1>
 
-<%= render 'form', branch: @branch %>
-
-<%= link_to 'Show', @branch %> |
-<%= link_to 'Back', branches_path %>
+	<%= render 'form', branch: @branch %>
+</div>
