--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,14 +1,25 @@
-<p id="notice"><%= notice %></p>
+<div class="container", id="branchnewform">
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @branch.name %>
-</p>
+	<div class="form-group">
+	  <label>Name:</label>
+	  <input type="text" class="form-control" value="<%= @branch.name %>" disabled>
+	</div>
 
-<p>
-  <strong>Branch json url:</strong>
-  <%= @branch.branch_json_url %>
-</p>
+	<div class="form-group">
+		<label>Branch json url:</label>
+		<textarea class="form-control" readonly>
+			<%= @branch.branch_json_url %>
+		</textarea>
+		
+	</div>
 
-<%= link_to 'Edit', edit_branch_path(@branch) %> |
-<%= link_to 'Back', branches_path %>
+	<div class="row">
+		<div class="col-sm-6" id="editbutton">
+			<%= link_to 'Edit', edit_branch_path(@branch) , :class=>"btn btn-secondary"%>
+		</div>
+		<div class="col-sm-6" id="backbutton">
+			<%= link_to 'Back', branches_path , :class=>"btn btn-secondary"%>
+		</div>
+	</div>
+</div>
