--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,15 @@
       <nav class="navbar" id="signedin">
         <div class="row">
            <div class="col-sm-6" id="header">
-              <%= link_to('Branches', branches_path)%> 
-              <%= link_to('Home', :controller => 'home', :action => 'index')%>
+              <%= link_to('Branches', branches_path , :class => "btn btn-info")%> 
+              <%= link_to('Home', {:controller => 'home', :action => 'index'}, { :class => "btn btn-info"})%>
           </div>
           <div class="col-sm-6" id="signout">
-            <p>Hello, <%= current_user.email %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p> 
+            <p>Hello, <%= current_user.email %> | <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete', :class => "btn btn-info" %></p> 
           </div>
         </div>
       </nav>
-     <% end %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
