--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -104,6 +104,9 @@
                   </p>
                 <% end %>
               </div>
+              <div class="card-footer text-muted">
+                  Last commit by: <b>Nokia</b>
+              </div>
             </div>
           
           <% end %>
