--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,14 +1,25 @@
 @import url('https://fonts.google.com/specimen/Lato?selection.family=Lato');
 
+html{
+  width: 100%; 
+}
+
 body{
   height: 100%;
 }
 
-.row#header{
-  height: 20%;
+.container-fluid{
+  background-color: white;
 }
 
-.col-xs-6#logodiv{
+.row#header{
+  width: 100%;
+  height: 20%;
+  padding: 2%;
+  background-color: white;
+}
+
+.col-lg-6#logodiv{
   padding: 2%;
 }
 
@@ -18,7 +29,7 @@ img#logo{
   margin: auto;
 }
 
-.col-xs-6#links{
+.col-lg-6#links{
   text-align: right;
   padding: 2%;
   vertical-align: bottom;
@@ -130,13 +141,41 @@ label{
   }
 }
 
+.table#branches{
+  padding: 2%;
+  margin: 0 auto;
+
+}
+
+.container#branchestable{
+  background-color:#ededed;
+  margin: auto;
+  margin-top: 5%;
+  text-align: middle;
+  box-shadow: 0 0 30px black;
+  border-radius: 25px;
+}
 
 .container#branchesheader{
   background-color: rgba(68, 108, 179, 0.7);
 }
 
+.row#branchesheader{
+  background-color: #d3d3d3;
+  padding: 2%;
+  border-top-right-radius:25px;
+  border-top-left-radius: 25px;
+}
+
+.col-sm-#brancheslabel{
+  margin: auto;
+  vertical-align: middle;
+}
+
 .navbar#signedin{
-  background-color: rgba(68, 108, 179, 0.7);
+  background-color: #183693;
+  padding: 2%;
+  color: white;
 }
 
 .col-sm-6#signout{
@@ -145,4 +184,39 @@ label{
 
 .col-sm-6#newbranchbutton{
   text-align: right;
+}
+
+.container#branchnewform{
+  width: 50%;
+  margin:auto;
+  margin-top: 5%;
+  padding: 2%;
+  background-color:#ededed;
+  box-shadow: 0 0 30px black;
+  border-radius: 25px;
+}
+
+.col-sm-6#submitbutton, .col-sm-6#editbutton{
+  text-align: left;
+}
+
+.col-sm-6#backbutton{
+  text-align: right;
+}
+
+.brancheslink{
+  color: white;
+}
+
+.homelink{
+  color: white;
+  background-color: pink; 
+}
+
+.col-sm-6#header{
+  color: white;
+}
+
+#linktobranches, #linktohome{
+  color: white;
 }
