added last-commit and major changes to UI

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -39,6 +39,9 @@
   if defined? @@cranches
     @@cranches.clear
   end
+  if @branches.empty? || @branches.nil?
+    sleep(10)
+  end
   @@cranches = Array.new
   @branches.each do |k|
     tmp = Cranch.new(k.branch_json_url)
@@ -48,7 +51,7 @@
   end
 %>
 
-<div class="carousel slide" data-ride="carousel" data-interval="20000" data-wrap="false">
+<div class="carousel slide" data-ride="carousel" data-interval="20000" data-pause="false">
   <div class="carousel-inner">
   <% @@cranches.each_with_index do |branch, index| %>
 
@@ -58,8 +61,8 @@
       <div class="carousel-item flex-wrap">
     <% end %>
 
-        <nav class="navbar navbar-inverse text-center bg-primary w-100">
-          <h1 class="display-4"><%= @branches.to_a[index].name %></h1>
+        <nav class="navbar text-center w-100">
+          <h1 class="display-3">{ <%= @branches.to_a[index].name %> }</h1>
         </nav>
         <div class="row w-100 justify-content-center m-0 p-4">
           
@@ -91,7 +94,8 @@
                   </h4>
               </div>
 
-              <div class="card-block">
+                <div class="card-block ">
+
                 <% i.getBuilds.each do |j| %>
                   <p class="card-text d-flex justify-content-between"><%= j.getInfo[0] %>
                   <% if j.getInfo[3] == 1 %>
@@ -108,8 +112,18 @@
                   </p>
                 <% end %>
               </div>
-              <div class="card-footer text-muted">
-                  Last commit by: <b>Nokia</b>
+
+              <% if 10 * n < 7 * d %>
+                <div class="card-footer card-header-danger">
+              <% else %>
+                <div class="card-footer card-header-success">
+              <% end %>
+
+                <% if i.commit != nil %>
+                  Last commit by: <br><b><%= i.commit %></b>
+                <% else %>
+                  Last commit by: <br><b>Nokia</b>
+                <% end %>
               </div>
             </div>
           
@@ -127,7 +141,7 @@
     function()
     {
       window.location.reload();
-    }, <%= @@cranches.size * 20000 %>
+    }, <%= (@@cranches.size * 20000) + 60000 %>
   );
 </script>
 
