--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,20 +4,22 @@
 }
 
 body {
-    background: #e4f1fe;
+    background: #333;
 }
 
 
 /* ---------------------------- Header --------------------------------*/
 
-nav.navbar {
-    box-shadow: 0 4px 8px #777;
+nav.navbar {/*
+    box-shadow: 0 4px 8px #777;*/
+    background: #292b2c !important;
 }
 
 nav.navbar h1 {
     color: #fff;
     text-transform: uppercase;
-    font-family: Nokia;
+    /*font-family: Nokia;*/
+    font-weight: 900;
 }
 
 /* ---------------------------- Carousel Item --------------------------------*/
@@ -31,7 +33,7 @@ nav.navbar h1 {
 .card {
     flex: 0 0 90%;
     margin: 5%;
-    box-shadow: 0 4px 8px #777;
+    /*box-shadow: 0 4px 8px #777;*/
     border: 0;
 }
 
@@ -42,6 +44,14 @@ nav.navbar h1 {
 
 .card-text {
     font-size: 1.4em;
+}
+
+.card-footer{
+    text-align: center;
+}
+
+.card-footer b{
+    font-size: 1.2em;
 }
 
 
@@ -55,6 +65,19 @@ nav.navbar h1 {
 .card-header-danger {
     background: #96281b !important;
     color: #fff;
+}
+
+
+/* ---------------------------- Card Wall Background --------------------------------*/
+
+.card-wall-success {
+    background: #d9edf7 !important;
+    color: #31708f;
+}
+
+.card-wall-danger {
+    background: #f2dede !important;
+    color: #a94442;
 }
 
 
