fixed race condition for loading branches

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -40,7 +40,7 @@
     @@cranches.clear
   end
   if @branches.empty? || @branches.nil?
-    sleep(10)
+    @branches = Branch.all
   end
   @@cranches = Array.new
   @branches.each do |k|
