--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,10 +2,13 @@
 
 html{
   width: 100%; 
+  height: 100%;
 }
 
 body{
-  height: 100%;
+  height: 100%; 
+  background-image: url(/admin_background.jpg);
+  background-size: cover;
 }
 
 .container-fluid{
@@ -36,17 +39,10 @@ img#logo{
 }
 
 .container-fluid#body{
-  padding: 10%;
+  padding: 7%;
   height: 80%;
   font-family: 'Lato', Lato;
-  background-image: url(/admin_background.jpg);
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 100%;
   font-size: 150%;
-}
-
-.height-full {
-  height: 100vh;
 }
 
 .form-check#loginbutton, .form-check#signupbutton{
@@ -59,7 +55,7 @@ img#logo{
   width: 40%; /*can be in percentage also.*/
   height: auto;
   margin: 0 auto;
-  padding: 1%;
+  padding: 3%;
   position: relative;
   background-color: rgba(68, 108, 179, 0.7);
   border-radius: 25px;
@@ -150,7 +146,7 @@ label{
 .container#branchestable{
   background-color:#ededed;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 3%;
   text-align: middle;
   box-shadow: 0 0 30px black;
   border-radius: 25px;
