--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,31 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container-fluid">
+  <div class="row" id="header">
+    <div class="col-lg-6" id="logodiv">
+      <img id="logo" src="/nokiaLogo.png" alt="rss feed" />
+    </div>
+    <div class="col-lg-6" id="links">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
+</div> 
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+<div class="container-fluid" id="body">
+  <div class="jumbotron" id="login">
+    <div class="inner">
+		<h2>Forgot your password?</h2>
+
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= devise_error_messages! %>
+
+		  <div class="form-group">
+		    <%= f.label :email %><br />
+		    <%= f.email_field :email, autofocus: true %>
+		  </div>
+
+		  <div class="actions">
+		    <%= f.submit "Send me reset password instructions" , :class => "btn btn-secondary"%>
+		  </div>
+		<% end %>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>      
