--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,8 +3,14 @@
     src: url('fonts/nokia/nokkok.ttf');
 }
 
-body {
+html, body {
+    font-family: Raleway;
     background: #333;
+    height: 100%;
+}
+
+.content{
+    min-height: 100%;
 }
 
 
@@ -12,7 +18,8 @@ body {
 
 nav.navbar {/*
     box-shadow: 0 4px 8px #777;*/
-    background: #292b2c !important;
+    /*background: #292b2c !important;*/
+    background: #000;
 }
 
 nav.navbar h1 {
@@ -94,6 +101,14 @@ nav.navbar h1 {
 .fa-times-circle {
     color: #a94442;
 }
+
+/* ---------------------------- Icon Colors --------------------------------*/
+footer{
+    margin-top: -50px;
+    height: 50px;
+    background: #000;
+}
+
 
 /* ---------------------------- Media Queries --------------------------------*/
 
