fixed console log

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -65,7 +65,7 @@
           'success': function(response)
            {
                $("#dashes").html(response);
-               console.log(response);
+               console.log('Success');
            },
            'error': function(errorThrown)
            {
