--- a/app/views/branches/updates.html.erb
+++ b/app/views/branches/updates.html.erb
@@ -2,14 +2,8 @@
 <% cranches = init_branches %>
 
 <div class="carousel-inner">
-<% cranches.each do |branch| %>
-
-  <% if branch == cranches.first %>
-    <div class="carousel-item active flex-wrap">
-  <% else %>
-    <div class="carousel-item flex-wrap">
-  <% end %>
-
+<% cranches.each_with_index do |branch, index| %>
+    <div class="carousel-item flex-wrap" id="<%= index %>">
       <nav class="navbar text-center w-100">
         <h1 class="display-3">{ <%= branch.name %> }</h1>
       </nav>
